--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -21,7 +21,7 @@
       <tr>
         <td><%= movie.title %></td>
         <td><%= movie.hotness %></td>
-        <td><img src="<%= movie.image_url %>" width="150" /></td>
+        <td><%= image_tag movie.image_url, class: "thumbnail" %></td>
         <td><%= movie.rating %></td>
         <td><%= movie.genre %></td>
         <td><%= movie.director %></td>
