--- a/app/views/movies/new.html.erb
+++ b/app/views/movies/new.html.erb
@@ -1,7 +1,7 @@
 <h1>New Movie</h1>
 
 <% if @failure %>
-	<h3><%= @failure %></h3>
+	<h3 class="alert alert-danger" role="alert"><%= @failure %></h3>
 <% end %>
 
 <%= render 'form' %>
